@@ -2,13 +2,16 @@
 
 = render 'shared/snippets/header'
 
-%article.file-holder.snippet-file-content
-  .file-title
-    = blob_icon 0, @snippet.file_name
-    = @snippet.file_name
-    .file-actions
-      = clipboard_button(clipboard_target: ".blob-content[data-blob-id='#{@snippet.id}']")
-      = link_to 'Raw', raw_namespace_project_snippet_path(@project.namespace, @project, @snippet), class: "btn btn-sm", target: "_blank"
-  = render 'shared/snippets/blob'
+.project-snippets
+  %article.file-holder.snippet-file-content
+    .file-title
+      = blob_icon 0, @snippet.file_name
+      = @snippet.file_name
+      .file-actions
+        = clipboard_button(clipboard_target: ".blob-content[data-blob-id='#{@snippet.id}']")
+        = link_to 'Raw', raw_namespace_project_snippet_path(@project.namespace, @project, @snippet), class: "btn btn-sm", target: "_blank"
+    = render 'shared/snippets/blob'
 
-%div#notes= render "projects/notes/notes_with_form"
+  = render 'award_emoji/awards_block', awardable: @snippet, inline: true
+
+  %div#notes= render "projects/notes/notes_with_form"
